--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,7 +83,7 @@ body {
 .main-index {
   flex-grow: 1;
   background: linear-gradient(to bottom,
-       #FFE17F 150px, #FFFFFF 150px 100%);
+      #FFE17F 150px, #FFFFFF 150px 100%);
 }
 
 .main-inner {
@@ -148,11 +148,11 @@ body {
 }
 
 .logo:hover {
-  opacity: 60%;
+  opacity: 0.6;
 }
 
 .logo:active {
-  opacity: 30%;
+  opacity: 0.3;
 }
 
 .logo:focus {
@@ -169,13 +169,13 @@ body {
   align-items: center;
 }
 
-
 .form {
   margin-right: 14px;
   width: 517px;
 }
 
 input[type=search] {
+  position: relative;
   padding: 10px 0;
   padding-left: 48px;
   width: 357px;
@@ -194,13 +194,22 @@ input[type=search] {
   border-bottom-left-radius: 20px;
 }
 
-input[type=search]:active {
-  color: #000000;
+.input[type=search]::before {
+  content: "";
+  position: absolute;
+  width: 363px;
+  height: 100%;
+  top: 0;
+  left: 0;
+
+  /*display: none;*/
+  background-color: #FF3D3D;
 }
 
-input[type=search]:focus {
-  outline: 2px solid #af4fff;
-  outline-offset: -2px;
+
+
+input[type=search]:active {
+  color: #000000;
 }
 
 input[type=search]:disabled {
@@ -208,7 +217,7 @@ input[type=search]:disabled {
 }
 
 .page-header-button {
-  padding: 0;
+  position: relative;
   padding: 10px 55px;
   margin-left: -6px;
   width: 160px;
@@ -216,11 +225,22 @@ input[type=search]:disabled {
   font-size: 16px;
   line-height: 20px;
   color: #000000;
-  border: none;
   background-color: transparent;
   border: 2px solid #000000;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
+}
+
+.page-header-button:before {
+  content: "";
+  position: absolute;
+  width: 160px;
+  height: 100%;
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+  top: -1px;
+  left: -2px;
+  display: none;
 }
 
 .page-header-button:hover {
@@ -228,23 +248,25 @@ input[type=search]:disabled {
   background-color: #000000;
 }
 
-.page-header-button:active {
-  color: rgba(0, 0, 0 0.3);
-  background-color: #000000;
+.page-header-button:active span {
+  opacity: 0.3;
 }
 
 .page-header-button:active {
   background-color: #000000;
+}
+
+.page-header-button:focus::before {
+  display: block;
 }
 
 .page-header-button:focus {
   color: #000000;
   background-color: transparent;
-  outline: 2px solid #af4fff;
-  outline-offset: 2px;
 }
 
 .page-header-button:disabled {
+  color: #000000;
   opacity: 0.3;
 }
 
@@ -356,6 +378,80 @@ input[type=search]:disabled {
   padding: 0;
 }
 
+.navigation-item:first-child {
+  position: relative;
+}
+
+.navigation-item:focus-within .subcatalog {
+  display: block;
+}
+
+.subcatalog {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: 211px 211px 211px;
+  grid-template-rows: 18px 18px 18px;
+  column-gap: 30px;
+  row-gap: 18px;
+  z-index: 3;
+  list-style-type: none;
+  background-color: #FFE17F;
+}
+
+.item-1 {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.item-2 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+.item-3 {
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+
+.item-4 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.item-5 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.item-6 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+}
+
+.subcatalog-link {
+  font-size: 16px;
+  line-height: 18px;
+  color: #000000;
+  text-decoration: none;
+
+}
+
+.subcatalog-link:hover {
+  opacity: 0.6;
+}
+.subcatalog-link:active {
+  opacity: 0.3;
+}
+.subcatalog-link:focus {
+  opacity: 1;
+outline: 2px solid #af4fff;
+outline-offset: 2px;
+}
+
+
+
 .navigation-link,
 .catalog-toggler {
   display: block;
@@ -407,7 +503,7 @@ top: 0;
   border: 2px solid rgba(0, 0, 0, 0.3);
 
 }*/
-
+/*
 .toggler {
   position: absolute;
   top: 0;
@@ -418,9 +514,9 @@ top: 0;
   right: -240px;
   opacity: 0.3;
 
-}
+}*/
 
-/*
+
 .catalog-toggler {
   display: flex;
   justify-content: space-between;
@@ -428,7 +524,6 @@ top: 0;
   width: 293px;
 }
 
-*/
 .toggler-plus {
   display: block;
 }
@@ -438,6 +533,7 @@ top: 0;
 }
 
 .catalog-toggler:hover svg {
+  color:#000000;
   opacity: 1;
 }
 
@@ -449,6 +545,8 @@ top: 0;
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
+
+.toggler-plus:active +
 
 
 .navigation-link:hover span {
@@ -485,6 +583,153 @@ top: 0;
 }
 
 
+/*Поповер*/
+
+.popover {
+  position: absolute;
+  top: 40px;
+  right: -77px;
+  z-index: 10;
+  padding: 20px;
+  box-sizing: border-box;
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+  background-color: #000000;
+  min-height: 183px;
+  display: none;
+}
+
+.popover-cart {
+  width: 320px;
+}
+
+.popover-open {
+  display: block;
+}
+
+.popover-content {
+  height: 100%;
+}
+
+.cart-items-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.cart-item {
+  position: relative;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.cart-item + .cart-item {
+  border-top: 1px solid rgba(0, 0, 0 0.1);
+}
+
+.cart-item:hover .cart-item-image,
+.cart-item:hover .cart-item-name {
+  opacity: 0.6;
+}
+
+.cart-item:active .cart-item-image,
+.cart-item:active .cart-item-name {
+  opacity: 0.3;
+}
+
+.cart-item-image {
+  position: relative;
+  display: block;
+  margin-right: 23px;
+}
+
+.cart-item-image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 187px;
+  height: 100%;
+  display: block;
+
+  background-color: #af4fff;
+  z-index: 10;
+}
+
+.cart-item:focus .cart-item-name {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+}
+
+
+
+
+.cart-item-name {
+  margin-right: auto;
+}
+
+.cart-item-button:hover {
+  opacity: 0.6;
+}
+
+.cart-item-button:active {
+  opacity: 0.3;
+}
+
+.cart-item-button:focus {
+  opacity: 1;
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+}
+
+.cart-item-wrapper {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 44px;
+  background-color: #1A1A1A;
+}
+
+.value {
+  text-transform: uppercase;
+}
+
+.popover-close-button {
+  display: block;
+  padding: 14.5px 0;
+  width: 280px;
+  border: none;
+  box-sizing: border-box;
+  background: #FFFFFF;
+  color: #000000;
+  text-align: center;
+}
+
+.popover-close-button:hover {
+  background: #FFE17F;
+}
+
+.popover-close-button:focus {
+  background: #FFFFFF;
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+}
+
+.popover-close-button:active {
+  background: #FFE17F;
+}
+
+.popover-close-button:active span {
+  opacity: 30%;
+}
+
+
+
 /*promo-products_БЛОК со слайдером*/
 
 .promo-products {
@@ -509,6 +754,7 @@ top: 0;
   height: 560px;
 }
 
+/*
 .promo-product-number {
   position: absolute;
 
@@ -521,7 +767,7 @@ top: 0;
   text-align: right;
   color: #FFFFFF;
 }
-
+*/
 .promo-product-arrow {
   position: absolute;
   top: 43%;
@@ -561,13 +807,14 @@ top: 0;
   outline-offset: 2px;
 }
 
+/*
 .promo-product-content {
   position: relative;
   margin: auto 0 38px 0;
   z-index: 2;
   width: 560px;
 }
-
+*/
 .promo-product-content .title {
   display: block;
   margin-bottom: 29px;
@@ -1024,7 +1271,7 @@ top: 0;
 
 .advantage-link:hover .icon-information svg {
   fill: #000000;
-  color:#000000;
+  color: #000000;
   opacity: 1;
 }
 
@@ -1362,11 +1609,11 @@ input[type=email]:disabled {
 }
 
 .logo-footer:hover {
-  opacity: 60%;
+  opacity: 0.6;
 }
 
 .logo-footer:active {
-  opacity: 30%;
+  opacity: 0.3;
 }
 
 .logo-footer:focus {
@@ -1448,23 +1695,33 @@ input[type=email]:disabled {
   color: #FFFFFF;
 }
 
-.button-footer:focus {
-  color: #FFFFFF;
-  outline: 2px solid #af4fff;
-}
-
 .button-footer:hover {
-  color: #ffc700;
+  color: #FFC700;
   text-decoration-line: underline;
   text-decoration-style: solid;
-  text-decoration-color: #ffc700;
+  text-decoration-color: #FFC700;
   text-decoration-thickness: 2px;
   text-underline-offset: 4px;
 }
 
 .button-footer:active {
-  opacity: 50%;
+  color: #FFC700;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-color: #FFC700;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 4px;
+  opacity: 0.5;
 }
+
+.button-footer:focus {
+  opacity: 1;
+  color: #FFFFFF;
+  text-decoration-line: none;
+  outline: 2px solid #af4fff;
+}
+
+
 
 .footer-social-list {
   margin: 0;
@@ -1528,21 +1785,31 @@ input[type=email]:disabled {
   margin-bottom: 64px;
 }
 
-
 .text-phone-footer {
   color: #FFFFFF;
-}
-
-.text-phone-footer:focus {
-  outline: 2px solid #af4fff;
+  text-decoration-line: underline;
+  text-decoration-color: #FFFFFF;
 }
 
 .text-phone-footer:hover {
   color: #ffcf00;
+  text-decoration-line: underline;
+  text-decoration-color: #ffcf00;
 }
 
 .text-phone-footer:active {
-  opacity: 50%;
+  color: #ffcf00;
+  text-decoration-line: underline;
+  text-decoration-color: #ffcf00;
+  opacity: 0.5;
+}
+
+.text-phone-footer:focus {
+  color: #FFFFFF;
+  text-decoration-line: underline;
+  text-decoration-color: #FFFFFF;
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
 }
 
 .htmlacademy-link {
@@ -1554,12 +1821,15 @@ input[type=email]:disabled {
 }
 
 .htmlacademy-link:active {
-  opacity: 30%;
+  color: #FFFFFF;
+  opacity: 0.3;
 }
 
 .htmlacademy-link:focus {
+  opacity: 1;
+  color: #FFC700;
   outline: 1px solid #af4fff;
-  outline-offset: 1px;
+  outline-offset: 2px;
 }
 
 
@@ -1615,15 +1885,16 @@ input[type=email]:disabled {
 }
 
 .text-breadcrumbs:hover {
-  opacity: 60%;
+  opacity: 0.6;
 }
 
 .text-breadcrumbs:active {
-  opacity: 30%;
+  opacity: 0.3;
 }
 
 .text-breadcrumbs:focus {
   opacity: 1;
+  color: #000000;
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
@@ -1675,6 +1946,22 @@ input[type=email]:disabled {
   border: none;
   margin-bottom: 47px;
 }
+
+.product-filter-group-title {
+  position: relative;
+  background-color: #af4fff;
+}
+
+.product-filter-group-title::before {
+  content: "";
+  position: absolute;
+  top: -12px;
+  left: 0;
+  width: 200px;
+  height: 2px;
+  background: 2px solid #000000;
+}
+
 
 
 /* Range */
@@ -1797,13 +2084,24 @@ input[type=email]:disabled {
   border: 2px solid #CCCCCC;
 }
 
+.control-mark:after {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  width: 22px;
+  height: 22px;
+  outline: 2px solid #af4fff;
+  display: none;
+}
+
+/*
 .control-mark:checked {
   background-image: url("../images/tick-filter.svg");
   background-position: center;
   background-repeat: no-repeat;
 }
-
-
+*/
 .control:hover {
   opacity: 0.6;
 }
@@ -1812,14 +2110,8 @@ input[type=email]:disabled {
   opacity: 0.3;
 }
 
-.control:focus .control-mark {
-  outline: 2px solid #af4fff;
-  outline-offset: 2px;
-}
-
-.control-input:focus .control-mark {
-  outline: 2px solid #af4fff;
-  outline-offset: 2px;
+.control:disabled {
+  opacity: 0.1;
 }
 
 .control-input[type="checkbox"]:checked + .control-mark {
@@ -1828,27 +2120,75 @@ input[type=email]:disabled {
   background-repeat: no-repeat;
 }
 
+.control-input[type="checkbox"]:checked:focus + .control-mark:after {
+  display: block;
+}
 
-.control-input[type="radio"] + .control-mark {
-  border-radius: 50%;
+.control-input[type="checkbox"]:checked:focus + .control-mark {
   border: 2px solid #000000;
 }
 
-.control-input[type="radio"]:checked + .control-mark::before {
-  position: absolute;
-  top: 4px;
-  left: 4px;
-  width: 8px;
-  height: 8px;
-  background-color: #000000;
-  border-radius: 50%;
-  content: "";
+.control-input[type="checkbox"]:focus + .control-mark:after {
+  display: block;
 }
 
-.product-card-button {
-  font-size: 16px;
-  line-height: 19px;
+.control-input[type="checkbox"]:focus + .control-mark {
+  border: 2px solid #CCCCCC;
 }
+
+
+.control-input[type="radio"] + .control-mark {
+  border-radius: 0.5;
+  border: 2px solid #CCCCCC;
+}
+
+.control-mark::before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  background: #000000;
+  top: 4px;
+  left: 4px;
+  border-radius: 50%;
+  display: none;
+}
+
+
+.control-input[type="radio"] + .control-mark {
+  border-radius: 50%;
+}
+
+.control-input[type="radio"]:checked + .control-mark::before {
+  display: block;
+}
+
+.control-input[type="radio"]:checked + .control-mark {
+  border: 2px solid #000000;
+}
+
+.control-input[type="radio"]:checked:focus + .control-mark:after {
+  display: block;
+}
+
+.control-input[type="radio"]:checked:focus + .control-mark {
+  border: 2px solid #000000;
+}
+
+.control-input[type="radio"]:checked:focus + .control-mark:before {
+  display: block;
+}
+
+
+
+.control-input[type="radio"]:focus + .control-mark:after {
+  display: block;
+}
+
+.control-input[type="radio"]:focus + .control-mark {
+  border: 2px solid #CCCCCC;
+}
+
 
 .button-filter {
   margin: 0 auto;
@@ -1866,7 +2206,7 @@ input[type=email]:disabled {
 }
 
 .button-filter:active {
-  background: #ffc700;
+  background: #FFC700;
 }
 
 .button-filter:focus {
@@ -1877,6 +2217,10 @@ input[type=email]:disabled {
   outline-offset: 2px;
 }
 
+.product-card-button {
+  font-size: 16px;
+  line-height: 19px;
+}
 
 /*Block sorting*/
 
@@ -1907,47 +2251,60 @@ input[type=email]:disabled {
 }
 
 .select {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 142px;
   margin-right: auto;
 }
 
 .text-select {
-  width: 100%;
-  padding-right: 15px;
+  position: relative;
+  /*width: 100%;*/
+  padding-right: 30px;
   box-sizing: border-box;
   font-size: 18px;
   line-height: 30px;
   color: #000000;
-  background-image: url("../images/icon-sorting");
+  /*background-image: url("../images/tick-free.svg");
   background-repeat: no-repeat;
-  background-position: right 3px center;
+  background-position: right 0 center;*/
   border: none;
   background: transparent;
-  /*appearance: none;*/
+  appearance: none;
 }
 
-.select:focus .text-select {
+
+
+.text-select::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  background-image: url("../images/tick-sorting.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+}
+
+.text-select:hover {
+  opacity: 0.6;
+}
+
+.text-select:active {
+  opacity: 0.3;
+}
+
+.text-select:focus {
+  opacity: 1;
   outline: 2px solid #af4fff;
   outline-offset: 2px;
 }
 
-.select:hover {
-  opacity: 0.6;
-}
-
-.select:active {
-  opacity: 0.3;
-}
-
-
-
 .button-sort {
+  display: block;
   width: 30px;
   height: 30px;
+  text-align: center;
   background-color: #F0F0F0;
   border: none;
 }
@@ -1973,6 +2330,7 @@ input[type=email]:disabled {
 .button-sort-up:active svg,
 .button-sort-down:active svg {
   fill: #000000;
+  opacity: 100%;
 }
 
 
@@ -2123,28 +2481,33 @@ input[type=email]:disabled {
   min-height: 55px;
   line-height: 40px;
   font-size: 16px;
-
   background-color: #FFFFFF;
   border: 3px solid #E5E5E5;
 }
 
-.download-button:focus {
-  outline: 2px solid #af4fff;
-  outline-offset: 2px;
-}
 
 .download-button:hover {
   border-color: #000000;
 }
 
-.download-button:active span {
+.download-button:active {
+  color: #000000;
+  border-color: #000000;
   opacity: 30%;
 }
 
-.download-button:active {
+.download-button:focus {
+  color: #000000;
   border: 3px solid #E5E5E5;
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
 }
 
+.download-button:disabled {
+  color: #000000;
+  border: 3px solid #E5E5E5;
+  opacity: 30%;
+}
 
 
 /*pagination*/
